--- a/src/components/Utility/CTANews/CTANews.module.scss
+++ b/src/components/Utility/CTANews/CTANews.module.scss
@@ -22,6 +22,7 @@
       text-align: center;
       text-transform: uppercase;
       max-width: 30rem;
+      color: $primaryD;
     }
 
     margin-bottom: $spaceL;
